--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div class="container">
       <header>
         <div class="header">
-          <h1>NETFLIX</h1>
+          <h1 class="animate__animated animate__backInLeft">NETFLIX</h1>
 
           <button type="submit" class="sign-up-btn">
             <a href="sign-up.html">sign-up</a>
@@ -21,7 +22,7 @@
           <div class="main">
             <div class="heading-1">
               <img src="./OIP (4).jpeg" alt="netflix" />
-              <h1>
+              <h1 class="animate__animated animate__backInDown">
                 Unlimited movies, TV
                 <br />
                 shows, and more
@@ -66,7 +67,7 @@
               <option value="tv shows">Tv shows</option>
             </select>
 
-            <div class="parent">
+            <div class="parent animate__animated animate__backInUp">
               <!-- child divs -->
 
               <div class="child">
