add changes in these files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>website</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
@@ -52,7 +55,6 @@
             </div>
           </div>
           <!-- </div> -->
-
 
           <div class="trending">
             <h3>Trending Now</h3>
@@ -257,14 +259,16 @@
                 placeholder="Email Address"
                 required
               />
-              <button type="submit" class="form-btn"><a href="#">Get started ></a></button>
+              <button type="submit" class="form-btn">
+                <a href="#">Get started ></a>
+              </button>
             </div>
           </div>
         </main>
 
         <footer>
           <div class="footer">
-            <h3>Questions? Contact us.</h3>
+            <!-- <h3>Questions? Contact us.</h3> -->
             <div class="column-1">
               <ul>
                 <li><a href="./sign-up.html">sign-up</a></li>
